31786.searchbar.784 component align fix

--- a/src/components/uikit/searchbar/style.scss
+++ b/src/components/uikit/searchbar/style.scss
@@ -94,6 +94,7 @@
 
 
         &__button {
+            left: 0;
             font-size: 21px;
         }
 
